corrected aside behavior and fixed not-wrapping around text issue in book2 of sql problem

--- a/styles.css
+++ b/styles.css
@@ -467,7 +467,7 @@ aside {
 .course-aside {
   /* flexbox container with aside content */
   background-color: #16191c;
-  width: 14rem;
+  width: 13.5rem;
   border: var(--dark-grey) solid 1px;
   box-shadow: -5px -3px rgba(18, 20, 23, 0.1);
   z-index: 3;
@@ -479,7 +479,8 @@ aside {
   align-items: center;
   position: sticky;
   max-height: 25rem;
-  top: 12rem;
+  top: 18vh;
+  margin-bottom: 10vh;
 }
 
 .course-aside-content {
@@ -674,10 +675,10 @@ aside {
 }
 
 .content-content {
-  /* Content subgrid inside Main grid */
   display: flex;
   flex-direction: column;
-  margin-left: 3%;
+  margin-left: 2%;
+  margin-right: 1%;
 }
 
 .content-details {
@@ -933,6 +934,9 @@ aside {
 code {
   /* Specific rule for the code snippets inside content lists*/
   background-color: rgb(0, 0, 0);
+  white-space: pre-wrap; /* Allows wrapping and preserves indentation */
+  word-wrap: break-word; /* Breaks long words */
+  overflow-wrap: break-word; /* Alternative for better browser support */
 }
 
 .return-to-top-btn {
@@ -941,7 +945,8 @@ code {
   border-radius: 100%;
   border: none;
   position: sticky;
-  top: 45rem;
+  top: 85vh;
+  bottom: 15vh;
   background-color: rgb(93, 90, 100);
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
   margin-right: 12rem;
